k3s/metrics/service-victoriametrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: victoriametrics
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 8428
      targetPort: 8428
      protocol: TCP
