k3s/metrics/service-vmauth-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: vmauth-public
  namespace: monitoring
spec:
  selector: { app.kubernetes.io/name: vmauth-public }
  ports:
    - { name: http, port: 8427, targetPort: http }
